# Data-Collection-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
memory-bank/: PRD.md  architecture.md  implementation-plan.md  progress.md  tech-stack.md
src/data_collection_agent/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  types.py
